--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,72 @@ h1 {
   padding: 0;
 }
 
+.card {
+  aspect-ratio: 1 / 1.6;
+  border: 0.5vmin solid var(--border);
+  cursor: pointer;
+  position: relative;
+  width: 56vmin;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background: linear-gradient(
+    130deg,
+    transparent 0% 33%,
+    var(--purple) 66%,
+    var(--violet) 83.5%,
+    var(--purple) 100%
+  );
+  background-position: 0% 0%;
+  background-size: 300% 300%;
+  transition: background-position 700ms ease, transform 700ms ease;
+  border: 1px solid var(--violet);
+}
+
+.card.active::before {
+  background-position: 100% 100%;
+  transform: scale(1.08, 1.03);
+}
+
+.card-content {
+  background: radial-gradient(rgba(255, 255, 255, 0.2) 8%, transparent 8%);
+  background-position: 0% 0%;
+  background-size: 5vmin 5vmin;
+  padding: 5vmin;
+  width: calc(100%);
+  height: calc(100%);
+  position: relative;
+  transition: background-position 700ms ease;
+  z-index: 2;
+}
+
+.card.active > .card-content {
+  background-position: -10% 0%;
+}
+
+.card-title,
+.card-subtitle {
+  color: white;
+  font-weight: 800;
+  margin: 0px;
+}
+
+.card-title {
+  font-size: 6vmin;
+  line-height: 1.25;
+}
+
+.card-subtitle {
+  font-size: 3vmin;
+  margin-top: 2vmin;
+}
+
 .link {
   --gradient-color-1: var(--colors-gray2);
   --gradient-color-2: var(--colors-gray3);
