build: make projects scrollable

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,15 @@ h1 {
   padding: 0;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .project {
   height: 200px;
 }
