--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,19 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
+button {
+  --gradient-color-1: var(--colors-gray2);
+  --gradient-color-2: var(--colors-gray3);
+  background-image: linear-gradient(
+    45deg,
+    var(--gradient-color-1),
+    var(--gradient-color-2),
+    var(--gradient-color-1),
+    var(--gradient-color-2)
+  );
+  background-size: 200% 100%;
+}
+
 h1 {
   margin: 0;
   padding: 0;
