--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   padding: 0;
   background-color: #111111;
   font-family: "Quicksand", sans-serif;
+  overflow-x: hidden;
 }
 
 .metal-gradient {
@@ -59,6 +60,7 @@ h1 {
   border: 0.5vmin solid var(--border);
   cursor: pointer;
   position: relative;
+  transition: transform 700ms ease;
   /* width: 56vmin; */
 }
 
@@ -211,7 +213,7 @@ h1 {
 
 @media screen and (max-width: 768px) {
   .card.active {
-    transform: scale(0.8, 0.8);
+    transform: scale(0.8);
   }
 
   .card.active::before {
