--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background-color: #111111;
+  background-color: #0d0d0d;
   font-family: "Quicksand", sans-serif;
   overflow-x: hidden;
 }
